--- a/About.html
+++ b/About.html
@@ -43,7 +43,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Maker</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="testimonials1-7" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="testimonials1-7" style="background-color: rgb(255, 255, 255);">
     <div>
         
         <div class="mbr-section__container mbr-section__container--std-padding container" style="padding-top: 93px; padding-bottom: 93px;">
@@ -120,6 +120,7 @@ Fax: +1 (0) 000 0000 002</p>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/mobirise/js/script.js"></script>
+  <script src="assets/formoid/formoid.min.js"></script>
   
   
 </body>
